update-manager (1:0.59.7) unstable; urgency=low

  * NEWS: removed empty file (LP#92250)

 --

update-manager (1:0.59.6) feisty; urgency=low

  * DistUpgrade/DistUpgradeView.py, DistUpgradeControler.py:
    - fixes in the apport integration

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 14 Mar 2007 18:22:06 +0100

update-manager (1:0.59.5) feisty; urgency=low

  * UpdateManager/fakegconf.py:
    - Fix missing {get,set}_string() in fakegconf
  * DistUpgrade/dialog_changes.ui
    - Fix alignment of image
  * DistUpgrade/dialog_error.ui
    - Fix caption
    - Make text box read only
  * DistUpgrade/DistUpgradeViewKDE.py
    - remove unused argument to reportBug()
    - fix caption of information box
    - show close button on error box

 -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 14 Mar 2007 11:05:22 +0000

update-manager (1:0.59.4) feisty; urgency=low

  * data/glade/UpdateManager.glade:
    - improve the wording of the dist-upgrade required dialog (LP#88706)
  * update-manager:
    - set better dialog caption (LP#88706)
  * DistUpgrade/DistUpgradeControler.py:
    - supress reboot notification when a upgrade is in progress (LP#91999)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Mar 2007 22:11:11 +0100

update-manager (1:0.59.3) feisty; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - Fix incorrect variable name, LP No 91887

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 13 Mar 2007 20:05:22 +0000

update-manager (1:0.59.2) feisty; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - Fix reference to konsole_frame (LP No 84717 comment 33)

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 13 Mar 2007 11:12:01 +0000

update-manager (1:0.59.1) feisty; urgency=low

  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeViewGtk.py:
    - do not fail if loading the svg pixbuf loader fails (LP#91593)

  [ Jonathan Riddell ]
  * DistUpgrade/DistUpgradeViewKDE.py:
    - import KRun, closes https://launchpad.net/bugs/91072