@@ -1,6 +1,8 @@
 update-manager (1:0.59.7) unstable; urgency=low
 
   * NEWS: removed empty file (LP#92250)
+  * DistUpgrade/DistUpgradeControler.py:
+    - fix wording of the "use network" question
 
  --
 
